<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="v1.0"
        android:id="@+id/lblver"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="right"
        android:layout_gravity="right"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="45dp"
        android:paddingTop="40dp"
        android:paddingRight="45dp"
        android:gravity="center_horizontal">

        <!--<pe.gob.qw.rutas.font.MaterialDesignIconsTextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="36dp"
            android:paddingBottom="36dp"
            android:text="@string/fontello_logo"
            android:textColor="@android:color/white"
            android:textSize="96dp"
            tools:ignore="SpUsage" />-->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/qw_logo"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/login_progress"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:id="@+id/login_form"
                    android:visibility="visible">

                    <!--style="?unknown_attrsdsdasadasdasasdasdasdasdsadsaasd_ref: 101007a" -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_transparent_background"
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_marginBottom="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical" >

                            <pe.gob.qw.rutas.font.MaterialDesignIconsTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/fontello_user"
                                android:textColor="@color/colorAccent"
                                android:textSize="32dp"
                                tools:ignore="SpUsage" />


                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/user"
                                    android:fontFamily="sans-serif"
                                    android:imeOptions="flagNoExtractUi"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="6dp"
                                    android:layout_weight="1"
                                    android:textColor="@android:color/black"
                                    android:hint="@string/username"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="16dp"
                            android:gravity="center_vertical" >

                            <pe.gob.qw.rutas.font.MaterialDesignIconsTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/fontello_password"
                                android:textColor="@color/colorAccent"
                                android:textSize="32dp"
                                tools:ignore="SpUsage" />

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/password"
                                    android:fontFamily="sans-serif"
                                    android:imeOptions="flagNoExtractUi"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="6dp"
                                    android:layout_weight="1"
                                    android:textColor="@android:color/black"
                                    android:hint="@string/password"
                                    android:singleLine="true"
                                    android:inputType="textPassword" />

                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        style="@style/ButtonStyle.RaisedFull"
                        />


                    <!--<com.dd.CircularProgressButton
                        android:id="@+id/circular_progress_bar_3"
                        style="@style/CircularProgressBarStyle.2" />-->
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:id="@+id/welcome_form"
                    android:visibility="gone">

                    <!--style="?unknown_attr_ref: 101007a" -->


                    <!--<com.dd.CircularProgressButton
                        android:id="@+id/circular_progress_bar_3"
                        style="@style/CircularProgressBarStyle.2" />-->
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:id="@+id/txtLoading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="Loading.."
                        android:layout_gravity="center_horizontal"
                        android:gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:gravity="bottom|center_horizontal">

        <ImageView
            android:layout_width="260dp"
            android:layout_height="70dp"
            android:id="@+id/imageView15"
            android:src="@drawable/iso"
            android:scaleType="fitXY" />

        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:id="@+id/textViewCopyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/splash_copyright"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</LinearLayout>