<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/lbl7"
            app:typeface="roboto_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LISTA DE FICHAS"
            android:textColor="@android:color/white"
            android:gravity="top|center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@android:color/black"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:visibility="gone" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="2dp">

                <pe.gob.qw.rutas.font.MaterialDesignIconsTextView
                    android:id="@+id/button_senddata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fontello_senddata"
                    android:textColor="@color/colorAccent"
                    android:textSize="65dp"
                    tools:ignore="SpUsage"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/lbl1"
                    app:typeface="roboto_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ENVIAR FICHAS REGISTRADAS"
                    android:textColor="@android:color/black"
                    android:gravity="top|center_horizontal"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="2dp"
                android:visibility="visible">

                <pe.gob.qw.rutas.font.MaterialDesignIconsTextView
                    android:id="@+id/button_backupdata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fontello_backupdata"
                    android:textColor="@color/colorAccent"
                    android:textSize="65dp"
                    tools:ignore="SpUsage"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/lbl2"
                    app:typeface="roboto_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="GUARDAR FICHAS EN ARCHIVO"
                    android:textColor="@android:color/black"
                    android:gravity="top|center_horizontal"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="2dp"
                android:visibility="gone">

                <pe.gob.qw.rutas.font.MaterialDesignIconsTextView
                    android:id="@+id/button_syncraciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fontello_syncraciones"
                    android:textColor="@color/colorAccent"
                    android:textSize="65dp"
                    tools:ignore="SpUsage"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/lbl3"
                    app:typeface="roboto_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ACTUALIZAR LIBERACIÓN DE RACIONES"
                    android:textColor="@android:color/black"
                    android:gravity="top|center_horizontal"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">


        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/lbl4"
            app:typeface="roboto_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LISTA DE FICHAS"
            android:textColor="@android:color/white"
            android:gravity="top|center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@android:color/black"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listEnvios"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <!--<ListView
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:id="@+id/listEnvios"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>-->

    </LinearLayout>
</LinearLayout>